<resources>
    <string name="app_name">PersonalData</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_fragment_title">Edit Person</string>
    <string name="first_name_up">First Name</string>
    <string name="first_name_down">First Name</string>
    <string name="sur_name_up">Sur Name</string>
    <string name="sur_name_down">Sur Name</string>
    <string name="age">Age</string>
    <string name="weight">Weight</string>
    <string name="age_value">Age</string>
    <string name="sur_name_value">Sur Name</string>
    <string name="first_name_value">First Name</string>
    <string name="height_value">Height (cm) </string>
    <string name="weight_value">Weight (lbs)</string>
    <string name="eye_color_value">Eye Color</string>
    <string name="save_value">Save</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>

    <string name="person_list_fragment_label">People</string>
    <string name="add_person_fragment_label"> {title} </string>
    <string name="person_details_fragment">Personal Details</string>
</resources>