<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".PersonListFragment">

    <!--Headers for Person data:  First Name, Sur Name , Age, Weight    -->
    <ToggleButton
        android:id="@+id/first_name"
        style="@style/MaterialAlertDialog.MaterialComponents.Title.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="@string/first_name_up"
        android:textOff="@string/first_name_down"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toStartOf="@+id/sur_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ToggleButton
        android:id="@+id/sur_name"
        style="@style/MaterialAlertDialog.MaterialComponents.Title.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="@string/sur_name"
        android:textOff="@string/sur_name"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toStartOf="@+id/height_value"
        app:layout_constraintStart_toEndOf="@+id/first_name"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/height_value"
        style="@style/MaterialAlertDialog.MaterialComponents.Title.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:textOff="@string/height_value"
        android:textOn="@string/height_value"
        app:layout_constraintEnd_toStartOf="@+id/weight_value"
        app:layout_constraintStart_toEndOf="@+id/sur_name"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/weight_value"
        style="@style/MaterialAlertDialog.MaterialComponents.Title.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="@string/weight"
        android:textOff="@string/weight"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toEndOf="@+id/height_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        style="@style/Widget.Material3.MaterialDivider"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@+id/first_name"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton

        android:id="@+id/add_person_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />




</androidx.constraintlayout.widget.ConstraintLayout>